--- a/WebApplication1/WebApplication1/Views/SANPHAMs/Delete.cshtml
+++ b/WebApplication1/WebApplication1/Views/SANPHAMs/Delete.cshtml
@@ -4,15 +4,15 @@
     ViewBag.Title = "Delete";
 }
 
-<h2>Delete</h2>
+<h2>Delete Product</h2>
 
 <h3>Are you sure you want to delete this?</h3>
 <div>
-    <h4>SANPHAM</h4>
+    <h4>Sản Phẩm Cần Xóa</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
-            @Html.DisplayNameFor(model => model.TenSP)
+            Tên Sản Phẩm
         </dt>
 
         <dd>
@@ -20,7 +20,7 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.TacGia)
+            Tác Giả
         </dt>
 
         <dd>
@@ -28,7 +28,7 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.NamSX)
+            Năm Sản Xuất
         </dt>
 
         <dd>
@@ -36,7 +36,7 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.NhaSX)
+            Nhà Sản Xuất
         </dt>
 
         <dd>
@@ -44,7 +44,7 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.LoaiSP)
+            Loại Sản Phẩm
         </dt>
 
         <dd>
@@ -52,7 +52,7 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.Gia)
+            Giá Tiền
         </dt>
 
         <dd>
@@ -60,7 +60,7 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.Noidung)
+            Mô tả
         </dt>
 
         <dd>
@@ -68,16 +68,22 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.NgayThem)
+            Ngày Thêm
         </dt>
 
         <dd>
             @Html.DisplayFor(model => model.NgayThem)
         </dd>
-
+        <dt>
+            Hình Ảnh
+        </dt>
+        <dd>
+            <img src="@Url.Action("Picture", new { Model.MaSP})" alt="Ảnh Sản Phẩm" " width="500px" height="500px" />
+        </dd>
     </dl>
 
-    @using (Html.BeginForm()) {
+    @using (Html.BeginForm())
+    {
         @Html.AntiForgeryToken()
 
         <div class="form-actions no-color">
