--- a/WebApplication1/WebApplication1/Views/SANPHAMs/Details.cshtml
+++ b/WebApplication1/WebApplication1/Views/SANPHAMs/Details.cshtml
@@ -4,79 +4,66 @@
     ViewBag.Title = "Details";
 }
 
-<h2>Details</h2>
+<div class="single-product">
 
-<div>
-    <h4>SANPHAM</h4>
-    <hr />
-    <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.TenSP)
-        </dt>
+    <h1> <b>THÔNG TIN SẢN PHẨM </b>   </h1>
 
-        <dd>
-            @Html.DisplayFor(model => model.TenSP)
-        </dd>
+    <div class="col-sm-6">
+        <div class="product-inner">
+            <div><b> TÊN SẢN PHẨM</b> </div>
+            <h2 class="product-name">@Model.TenSP</h2>
+            <div class="product-inner-price">
+                <div>GIÁ TIỀN </div>
+                @Model.Gia
+            </div>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.TacGia)
-        </dt>
+            <div class="cart">
+                <form action="@Url.Action("Create","ShoppingCart")" method="post">
+                    <input type="hidden" name="MaSP" value="@Model.MaSP" />
+                    <div class="quantity">
+                        <div> SỐ LƯỢNG </div>
+                        <input type="number" size="4" class="input-text qty text" title="text" value="1" name="SoLuong" min="1" max="10">
+                    </div>
 
-        <dd>
-            @Html.DisplayFor(model => model.TacGia)
-        </dd>
+                    <input class="btn-3" type="submit" value="add to cart" />
 
-        <dt>
-            @Html.DisplayNameFor(model => model.NamSX)
-        </dt>
+                </form>
+            </div>
 
-        <dd>
-            @Html.DisplayFor(model => model.NamSX)
-        </dd>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.NhaSX)
-        </dt>
+            <div class="product-inner-category">
+                <p>Category: <a href="">Summer</a>. Tags: <a href="">awesome</a>, <a href="">best</a>, <a href="">sale</a>, <a href="">shoes</a>. </p>
+            </div>
 
-        <dd>
-            @Html.DisplayFor(model => model.NhaSX)
-        </dd>
+            <div role="tabpanel">
+                <ul class="product-tab" role="tablist">
+                    <li role="presentation" class="active"><a href="#home" aria-controls="home" role="tab" data-toggle="tab">Description</a></li>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.LoaiSP)
-        </dt>
+                    <div class="tab-content">
+                        <div role="tabpanel" class="tab-pane fade in active" id="home">
+                            <h2>Mô Tả</h2>
+                            <span>
+                                @MvcHtmlString.Create(Model.Noidung)
+                            </span>
+                        </div>
+                        <div class="col-sm-2">
+                            <div class="product-images">
+                                <div class="product-main-img">
+                                    <b>HÌNH ẢNH </b>
+                                    <img src="@Url.Action("Picture", new {Model.MaSP} )" alt="Ảnh Sản Phẩm">
 
-        <dd>
-            @Html.DisplayFor(model => model.LoaiSP)
-        </dd>
+                                </div>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.Gia)
-        </dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.Gia)
-        </dd>
+                            </div>
+                        </div>
+                        <div role="tabpanel" class="tab-pane fade" id="profile">
+                            <h2>Reviews</h2>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.Noidung)
-        </dt>
+                        </div>
+                    </div>
+            </div>
 
-        <dd>
-            @Html.DisplayFor(model => model.Noidung)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.NgayThem)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.NgayThem)
-        </dd>
-
-    </dl>
+        </div>
+    </div>
 </div>
-<p>
-    @Html.ActionLink("Edit", "Edit", new { id = Model.MaSP }) |
-    @Html.ActionLink("Back to List", "Index")
-</p>
