--- a/WebApplication1/WebApplication1/Views/SANPHAMs/Edit.cshtml
+++ b/WebApplication1/WebApplication1/Views/SANPHAMs/Edit.cshtml
@@ -1,100 +1,126 @@
-﻿@model IEnumerable<WebApplication1.Models.SANPHAM>
+﻿@model WebApplication1.Models.SANPHAM
 
 @{
-
-
-    ViewBag.Title = "Index";
+    ViewBag.Title = "Edit";
 }
 
-<h2>DANH SÁCH SẢN PHẨM </h2>
+<h4>Edit @Model.TenSP</h4>
 
-<p>
-    @Html.ActionLink("Create New", "Create")
-</p>
-<table class="table">
-    <tr>
-        <th>
-            Mã Sản Phẩm
-        </th>
-        <th class="col-md-1">
-            Tên Sản Phẩm
-        </th>
-        <th>
-            Tác Giả
-        </th>
-        <th>
-            Năm Sản Xuất
-        </th>
-        <th>
-            Nhà Sản Xuất
-        </th>
-        <th>
-            Loại Sản Phẩm
-        </th>
-        <th>
-            Giá Tiền
-        </th>
-        <th>
-            Ngày Thêm
-        </th>
-        <th class="col-md-3">
-            Nội Dung
-        </th>
 
-        <th class="col-md-2">
-            Hình Ảnh
-        </th>
+@using (Html.BeginForm("Edit", "SANPHAMs", FormMethod.Post, new { enctype = "multipart/form-data" }))
+{
+    @Html.AntiForgeryToken()
 
-        <th></th>
-    </tr>
+    <div class="form-horizontal">
+        <h4>SANPHAM</h4>
+        <hr />
+        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+        @Html.HiddenFor(model => model.MaSP)
+        <div class="form-group">
+            @Html.LabelFor(model => model.MaSP, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.MaSP, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.MaSP, "", new { @class = "text-danger" })
+            </div>
+        </div>
 
-    @foreach (var item in Model)
-    {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.MaSP)
-            </td>
-            <td>
-                <a href="@Url.Action("Details" ,new {item.MaSP}) target="_blank"> @Html.DisplayFor(modelItem => item.TenSP)</a>
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.TacGia)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.NamSX)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.NhaSX)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.LoaiSP)
-            </td>
-            <td class="col-md-1">
-                @Html.DisplayFor(modelItem => item.Gia) VND
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.NgayThem)
-            </td>
-            <td class="col-md-3">
-                @if (item.Noidung != null && item.Noidung.Length > 100)
-                {
-                    @item.Noidung.Substring(0, 100)
-                }
-                else
-                {
-                    @item.Noidung
-                }
-            </td>
+        <div class="form-group">
+            @Html.LabelFor(model => model.TenSP, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.TenSP, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.TenSP, "", new { @class = "text-danger" })
+            </div>
+        </div>
 
-            <td>
-                <img class="col-md-10" src="@Url.Action("picture", new { item.MaSP})" width="37px" height="40px" />
-            </td>
-            <td>
-                <button> @Html.ActionLink("Edit", "Edit", new { item.MaSP }) </button>
-                <button>@Html.ActionLink("Details", "Details", new { item.MaSP })</button>
-                <button>@Html.ActionLink("Delete", "Delete", new { item.MaSP })  </button>
-            </td>
-        </tr>
-    }
+        <div class="form-group">
+            @Html.LabelFor(model => model.TacGia, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.TacGia, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.TacGia, "", new { @class = "text-danger" })
+            </div>
+        </div>
 
-</table>
+        <div class="form-group">
+            @Html.LabelFor(model => model.NamSX, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.NamSX, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.NamSX, "", new { @class = "text-danger" })
+            </div>
+        </div>
+
+        <div class="form-group">
+            @Html.LabelFor(model => model.NhaSX, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.NhaSX, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.NhaSX, "", new { @class = "text-danger" })
+            </div>
+        </div>
+
+        <div class="form-group">
+            @Html.LabelFor(model => model.LoaiSP, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.LoaiSP, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.LoaiSP, "", new { @class = "text-danger" })
+            </div>
+        </div>
+
+        <div class="form-group">
+            @Html.LabelFor(model => model.Gia, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.Gia, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.Gia, "", new { @class = "text-danger" })
+
+            </div>
+        </div>
+
+        <div class="form-group">
+            @Html.LabelFor(model => model.Noidung, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+
+                @Html.TextAreaFor(model => model.Noidung, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.Noidung, "", new { @class = "text-danger" })
+            </div>
+        </div>
+        <div class="form-group">
+            <label class="control-label col-md-2" for="IMG">Picture</label>
+            <div>
+                <input class="col-md-10" type="file" name="Picture" id="IMG" onchange="readPicture(this)" accept="image/gif, image/jpeg, image/png" />
+            </div>
+            <img id="picture" src="@Url.Action("Picture", new { Model.MaSP }) " />
+
+        </div>
+
+        <div class="form-group">
+            <div class="col-md-offset-2 col-md-10">
+                <input type="submit" value="Update" class="btn btn-default" />
+            </div>
+        </div>
+    </div>
+}
+
+<div>
+    @Html.ActionLink("Back to List", "Index")
+</div>
+
+@section Scripts {
+    @Scripts.Render("~/bundles/jqueryval")
+    <script src="https://cdn.tiny.cloud/1/no-api-key/tinymce/5/tinymce.min.js" referrerpolicy="origin"></script>
+    <script>
+            tinymce.init({
+                selector: 'textarea#Noidung',
+                menubar: false
+            });
+        function readPicture(input) {
+            if (input.files && input.files[0]) {
+                var reader = new FileReader();
+
+                reader.onload = function (e) {
+                    $('img#picture').attr('src', e.target.result);
+
+                };
+
+                reader.readAsDataURL(input.files[0]);
+            }
+        }
+    </script>
+}
