--- a/WebApplication1/WebApplication1/Views/SANPHAMs/Index2.cshtml
+++ b/WebApplication1/WebApplication1/Views/SANPHAMs/Index2.cshtml
@@ -6,7 +6,16 @@
 
 
 
+<div class="site-branding-area">
+    <div class="container">
+        <div class="row">
+            <div class="col-sm-6">
 
+            </div>
+
+
+        </div>
+    </div>
 </div> <!-- End site branding area -->
 
 <div class="mainmenu-area">
