--- a/WebApplication1/WebApplication1/Views/ShoppingCart/Index.cshtml
+++ b/WebApplication1/WebApplication1/Views/ShoppingCart/Index.cshtml
@@ -97,6 +97,9 @@
                         </tr>
                     </tbody>
                 </table>
+                <br>
+
+                <button class="btn-1"> <a href="@Url.Action("Create", "DonHang")"> Proceed To Checkout </a> </button>
             </div>
 
 
