--- a/WebApplication1/WebApplication1/Views/DonHang/Create.cshtml
+++ b/WebApplication1/WebApplication1/Views/DonHang/Create.cshtml
@@ -16,60 +16,14 @@
 
 
             </div>
-
-
-
-
             <div class="col-md-8">
                 <div class="product-content-right">
                     <div class="woocommerce">
 
 
-                        <form id="login-form-wrap" class="login collapse" method="post">
+                     
 
 
-                            <p>If you have shopped with us before, please enter your details in the boxes below. If you are a new customer please proceed to the Billing &amp; Shipping section.</p>
-
-                            <p class="form-row form-row-first">
-                                <label for="username">
-                                    Username or email <span class="required">*</span>
-                                </label>
-                                <input type="text" id="username" name="username" class="input-text">
-                            </p>
-                            <p class="form-row form-row-last">
-                                <label for="password">
-                                    Password <span class="required">*</span>
-                                </label>
-                                <input type="password" id="password" name="password" class="input-text">
-                            </p>
-                            <div class="clear"></div>
-
-
-                            <p class="form-row">
-                                <input type="submit" value="Login" name="login" class="button">
-                                <label class="inline" for="rememberme"><input type="checkbox" value="forever" id="rememberme" name="rememberme"> Remember me </label>
-                            </p>
-                            <p class="lost_password">
-                                <a href="#">Lost your password?</a>
-                            </p>
-
-                            <div class="clear"></div>
-                        </form>
-
-
-
-                        <form id="coupon-collapse-wrap" method="post" class="checkout_coupon collapse">
-
-                            <p class="form-row form-row-first">
-                                <input type="text" value="" id="coupon_code" placeholder="Coupon code" class="input-text" name="coupon_code">
-                            </p>
-
-                            <p class="form-row form-row-last">
-                                <input type="submit" value="Apply Coupon" name="apply_coupon" class="button">
-                            </p>
-
-
-                        </form>
                         <!-- Start Chi tiết đơn hàng -->
                         <form enctype="multipart/form-data" action="#" class="checkout" method="post" name="checkout">
                             @using (Html.BeginForm("Create", "DonHang", FormMethod.Post, new { @class = "checkout" }))
@@ -102,7 +56,7 @@
                                 </div>
 
                                 <div class="form-group">
-                                    <label class="control-label col-md-2">Dia chi</label>
+                                    <label class="control-label col-md-2">Địa Chỉ</label>
                                     <div class="col-md-10">
                                         @Html.EditorFor(model => model.DiaChi, new { htmlAttributes = new { @class = "form-control", requaired = true } })
                                         @Html.ValidationMessageFor(model => model.DiaChi, "", new { @class = "text-danger" })
