--- a/WebApplication1/WebApplication1/Views/SANPHAMs/Index.cshtml
+++ b/WebApplication1/WebApplication1/Views/SANPHAMs/Index.cshtml
@@ -7,6 +7,14 @@
 }
 
 <h2>DANH SÁCH SẢN PHẨM </h2>
+<tr>
+    <td>
+        <a class="button-radius" href="@Url.Action("index" ,"AspNetUsers")"> TÀI KHOẢN KHÁCH HÀNG</a> |
+        <a class="button-radius" href="@Url.Action("Index","THONGTINCANHANs")">THÔNG TIN KHÁCH HÀNG </a> |
+        <a class="button-radius" href="@Url.Action("index","SANPHAMs")">SẢN PHẨM </a> |
+        <a class="button-radius" href="@Url.Action("index","DonHang")">ĐƠN HÀNG </a>|
+    </td>
+</tr>
 
 <p>
     @Html.ActionLink("Create New", "Create")
