--- a/WebApplication1/WebApplication1/Views/Shared/bookstore.cshtml
+++ b/WebApplication1/WebApplication1/Views/Shared/bookstore.cshtml
@@ -35,80 +35,80 @@
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
 </head>
-<body>
 
-    <div class="header-area">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-8">
-                    <div class="user-menu">
-                        <ul>
-                            <li><a href="#"><i class="fa fa-user"></i> Tài Khoản    </a></li>
-                            <li><a href="#"><i class="fa fa-heart"></i> Sản Phẩm Yêu Thích</a></li>
-                            <li><a href="#"><i class="fa fa-user"></i> Giỏ Hàng </a></li>
-                            <li><a href="checkout.html"><i class="fa fa-user"></i> Kiểm Tra </a></li>
-                            @Html.Partial("_LoginPartial")
-                        </ul>
-                    </div>
+
+<div class="header-area">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-8">
+                <div class="user-menu">
+                    <ul>
+                        <li><a href="@Url.Action("Index2", "THONGTINCANHANs")"></i> Tài Khoản    </a></li>
+                        <li><a href="#"><i class="fa fa-heart"></i> Sản Phẩm Yêu Thích</a></li>
+                        <li><a href="checkout.html"><i class="fa fa-user"></i> Kiểm Tra </a></li>
+                        @Html.Partial("_LoginPartial")
+                    </ul>
                 </div>
+            </div>
 
 
-                <div class="col-md-4">
-                    <div class="header-right">
-                        <ul class="list-unstyled list-inline">
-                            <li class="dropdown dropdown-small">
-                                <a data-toggle="dropdown" data-hover="dropdown" class="dropdown-toggle" href="#"><span class="key">Tiền Tệ: </span><span class="value">VND </span><b class="caret"></b></a>
-                                <ul class="dropdown-menu">
-                                    <li><a href="#">VND</a></li>
-                                    <li><a href="#">USD</a></li>
-                                    <li><a href="#">YEN</a></li>
-                                </ul>
-                            </li>
+            <div class="col-md-4">
+                <div class="header-right">
+                    <ul class="list-unstyled list-inline">
+                        <li class="dropdown dropdown-small">
+                            <a data-toggle="dropdown" data-hover="dropdown" class="dropdown-toggle" href="#"><span class="key">Tiền Tệ: </span><span class="value">VND </span><b class="caret"></b></a>
+                            <ul class="dropdown-menu">
+                                <li><a href="#">VND</a></li>
+                                <li><a href="#">USD</a></li>
+                                <li><a href="#">YEN</a></li>
+                            </ul>
+                        </li>
 
-                            <li class="dropdown dropdown-small">
-                                <a data-toggle="dropdown" data-hover="dropdown" class="dropdown-toggle" href="#"><span class="key">Ngôn Ngữ: </span><span class="value">Tiếng Việt </span><b class="caret"></b></a>
-                                <ul class="dropdown-menu">
-                                    <li><a href="#">Tiếng Việt</a></li>
-                                    <li><a href="#">Tiếng Anh</a></li>
-                                    <li><a href="#">Tiếng Nhật</a></li>
-                                </ul>
-                            </li>
-                        </ul>
-                    </div>
+                        <li class="dropdown dropdown-small">
+                            <a data-toggle="dropdown" data-hover="dropdown" class="dropdown-toggle" href="#"><span class="key">Ngôn Ngữ: </span><span class="value">Tiếng Việt </span><b class="caret"></b></a>
+                            <ul class="dropdown-menu">
+                                <li><a href="#">Tiếng Việt</a></li>
+                                <li><a href="#">Tiếng Anh</a></li>
+                                <li><a href="#">Tiếng Nhật</a></li>
+                            </ul>
+                        </li>
+                    </ul>
                 </div>
+            </div>
 
 
-                <div style="margin-left:900px" class="single-sidebar">
-                    <form action="@Url.Action("Search","SANPHAMs")" method="get">
-                        <input type="search" name="Keyword" placeholder="Your search here" value="@ViewBag.Keyword">
-                        <button><i class="fa fa-search" aria-hidden="true"></i></button>
-                    </form>
-                </div>
-                <div class="aa-logo">
-                    <!-- Text based logo -->
-                    <a href="@Url.Action("Index2","SANPHAMs")">
-                        <h2 style="margin-left: 20px ">
-                            BOOK<strong> STORE</strong> </h2 style="margin-left:>
-                            <br> <span style="margin-left: 20px ">Thư viện của bạn </span> </br>
+            <div style="margin-left:900px" class="single-sidebar">
+                <form action="@Url.Action("Search","SANPHAMs")" method="get">
+                    <input type="search" name="Keyword" placeholder="Your search here" value="@ViewBag.Keyword">
+                    <button><i class="fa fa-search" aria-hidden="true"></i></button>
+                </form>
+            </div>
+            <div class="aa-logo">
+                <!-- Text based logo -->
+                <a href="@Url.Action("Index2","SANPHAMs")">
+                    <h2 style="margin-left: 20px ">
+                        BOOK<strong> STORE</strong>
+                    </h2>
+                    <br> <span style="margin-left: 20px ">Thư viện của bạn </span> </br>
+                </a>
+                <!-- img based  logo -->
+                <!-- <a href="index.html"><img src="img/logo.jpg" alt="logo img"></a> -->
+            </div>
+
+            <div style="margin-left:500px" class="col-sm-6">
+                <div class="shopping-item">
+                    <a href="@Url.Action("index","ShoppingCart")">
+                        Giỏ Hàng <i class="fa fa-shopping-cart"> </i>
+                        @((Session["ShoppingCart"] as List<CHITIETGIOHANG>)?.Count)
                     </a>
-                    <!-- img based  logo -->
-                    <!-- <a href="index.html"><img src="img/logo.jpg" alt="logo img"></a> -->
+
                 </div>
+                .
+            </div>
 
-                <div style="margin-left:500px" class="col-sm-6">
-                    <div class="shopping-item">
-                        <a href="@Url.Action("Index", "ShoppingCart")>">
-                            Giỏ Hàng <i class="fa fa-shopping-cart"> </i>
-                            @((Session["ShoppingCart"] as List<CHITIETGIOHANG>)?.Count)
-                        </a>
+        </div> <!-- End header area -->
 
-                    </div>
-                    .
-                </div>
-
-            </div> <!-- End header area -->
-
-
+        <body>
 
             <main>
                 @RenderBody()
@@ -215,5 +215,5 @@
 
             @RenderSection("scripts", required: false)
 
-</body>
+        </body>
 </html>
