--- a/WebApplication1/WebApplication1/Views/AspNetRoles/Index.cshtml
+++ b/WebApplication1/WebApplication1/Views/AspNetRoles/Index.cshtml
@@ -5,7 +5,14 @@
 }
 
 <h2>Roles</h2>
-
+<tr>
+    <td>
+        <a class="button-radius" href="@Url.Action("index" ,"AspNetUsers")"> TÀI KHOẢN KHÁCH HÀNG</a> |
+        <a class="button-radius" href="@Url.Action("Index","THONGTINCANHANs")">THÔNG TIN KHÁCH HÀNG </a> |
+        <a class="button-radius" href="@Url.Action("index","SANPHAMs")">SẢN PHẨM </a> |
+        <a class="button-radius" href="@Url.Action("index","DonHang")">ĐƠN HÀNG </a>|
+    </td>
+</tr>
 <p>
 
     <a href="@Url.Action("Create")">Create New</a>
