--- a/WebApplication1/WebApplication1/Views/AspNetUsers/Index.cshtml
+++ b/WebApplication1/WebApplication1/Views/AspNetUsers/Index.cshtml
@@ -7,6 +7,7 @@
 <h2>TÀI KHOẢN KHÁCH HÀNG </h2>
 <tr>
     <td>
+        <a class="button-radius" href="@Url.Action("index" ,"AspNetRoles")"> PHÂN QUYỀN</a> |
         <a class="button-radius" href="@Url.Action("index" ,"AspNetUsers")"> TÀI KHOẢN KHÁCH HÀNG</a> |
         <a class="button-radius" href="@Url.Action("Index","THONGTINCANHANs")">THÔNG TIN KHÁCH HÀNG </a> |
         <a class="button-radius" href="@Url.Action("index","SANPHAMs")">SẢN PHẨM </a> |
