--- a/WebApplication1/WebApplication1/Views/DonHang/Index.cshtml
+++ b/WebApplication1/WebApplication1/Views/DonHang/Index.cshtml
@@ -61,6 +61,10 @@
 
         @Html.ActionLink("Delete", "Delete", new { item.MaHD })
     </td>
+    <td>
+        
+        <a href="~/CHITIETHOADONs/Details/@item.MaHD"> Xem chi tiết</a>
+    </td>
 </tr>
     }
 
