--- a/WebApplication1/WebApplication1/Views/Shared/bookstore.cshtml
+++ b/WebApplication1/WebApplication1/Views/Shared/bookstore.cshtml
@@ -79,7 +79,7 @@
 
             <div style="margin-left:900px" class="single-sidebar">
                 <form action="@Url.Action("Search","SANPHAMs")" method="get">
-                    <input type="search" name="Keyword" placeholder="Your search here" value="@ViewBag.Keyword">
+                    <input type="search" name="keyword" placeholder="Your search here" value="@ViewBag.Keyword">
                     <button><i class="fa fa-search" aria-hidden="true"></i></button>
                 </form>
             </div>
