--- a/WebApplication1/WebApplication1/Views/DonHang/Create.cshtml
+++ b/WebApplication1/WebApplication1/Views/DonHang/Create.cshtml
@@ -41,9 +41,7 @@
                         <label class="control-label col-md-2">Họ tên</label>
                         <div class="col-md-10">
 
-
-
-                            @Html.EditorFor(model => model.TenKH, new { htmlAttributes = new { @class = "form-control", requaired = true } })
+                            @Html.EditorFor(model => model.TenKH, new { htmlAttributes = new { @class = "form-control", required = true ,patten = ""} })
                             @Html.ValidationMessageFor(model => model.TenKH, "", new { @class = "text-danger" })
                         </div>
                         <br>
@@ -56,7 +54,7 @@
                     <div class="form-group">
                         <label class="control-label col-md-2">Số điện thoại</label>
                         <div class="col-md-10">
-                            @Html.EditorFor(model => model.SDT, new { htmlAttributes = new { @class = "form-control", requaired = true } })
+                            @Html.EditorFor(model => model.SDT, new { htmlAttributes = new { @class = "form-control", required = true } })
                             @Html.ValidationMessageFor(model => model.SDT, "", new { @class = "text-danger" })
                         </div>
                         <br>
@@ -68,7 +66,7 @@
                     <div class="form-group">
                         <label class="control-label col-md-2">Địa Chỉ</label>
                         <div class="col-md-10">
-                            @Html.EditorFor(model => model.DiaChi, new { htmlAttributes = new { @class = "form-control", requaired = true } })
+                            @Html.EditorFor(model => model.DiaChi, new { htmlAttributes = new { @class = "form-control", required = true } })
                             @Html.ValidationMessageFor(model => model.DiaChi, "", new { @class = "text-danger" })
                         </div>
                         <br>
